gitops/manifests/prod/mailserver/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mailserver
  namespace: prod
  labels:
    app: mailserver
spec:
  type: ClusterIP
  selector:
    app: mailserver
  ports:
    - name: smtp
      port: 25
      targetPort: 25
    - name: submission
      port: 587
      targetPort: 587
    - name: smtps
      port: 465
      targetPort: 465
    - name: imap
      port: 143
      targetPort: 143
    - name: imaps
      port: 993
      targetPort: 993
